# zestify-onboard

./: .gitignore  Makefile  TODO.md
.gemini/: GEMINI.md  ignore
.github/: copilot-instructions.md
interface/: .env.example  .prettierrc.json  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
interface/app/: page.tsx
interface/app/api/chat/: route.ts
interface/components/: chat.tsx
interface/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
knowledge_base/: HYBRID_SETUP.md  api_server.py  examples.py  ingest.py  main.py  pyproject.toml
knowledge_base/src/: api_server.py  data_clean.py  data_embedding.py  data_load.py  data_split.py  git_loader.py
knowledge_base/src/examples/: evaluation.py  evaluation_local.py  index.py  visualize_db.py
knowledge_base/src/utils/: clean_document.py  logging_config.py  model_config.py  save_cleaned_examples.py
knowledge_base/tests/: test_main.py
