[project]
name = "knowledge-base"
version = "1.0.0"
description = "AI RAG system (knowledge base) for Zestify web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.0",
    "gitpython>=3.1.45",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-ollama>=0.2.8",
    "langchain-text-splitters>=0.3.9",
    "langchain[google-genai]>=0.3.27",
    "markdownify>=0.12.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501"]
cache-dir = ".ruff_cache"
exclude = ["src/tmp/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
